# ifai-sdk

./: .gitignore  README.md  pyproject.toml  setup.py
insightfinder/: __init__.py  auth.py  client.py  config.py
insightfinderai/: __init__.py  client.py  config.py
insightfinderai/model/: __init__.py  batch_chat_result.py  batch_comparison_result.py  batch_evaluation_result.py  chat_response.py  evaluation_result.py  session_list.py  usage_stats.py
tests/: simple_batch_test.py  test_client.py  test_customer_infra.py
